--- a/analytics.html
+++ b/analytics.html
@@ -7,11 +7,11 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="assets/css/styles.css" />
-<script defer src="assets/js/app.js"></script>
+<link rel="stylesheet" href="styles.css" />
+<script defer src="js/app.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script defer src="assets/js/charts.js"></script>
+    <script defer src="js/charts.js"></script>
   </head>
   <body>
     <header class="nav">
