fix : Organizado por carpetas

--- a/HTML/suppliers.html
+++ b/HTML/suppliers.html
@@ -7,11 +7,11 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="assets/css/styles.css" />
-<script defer src="assets/js/app.js"></script>
+<link rel="stylesheet" href="/CSS/styles.css" />
+<script defer src="/JS/app.js"></script>
 
-    <script defer src="assets/js/api.js"></script>
-    <script defer src="assets/js/suppliers.js"></script>
+    <script defer src="/JS/api.js"></script>
+    <script defer src="/JS/suppliers.js"></script>
   </head>
   <body>
     <header class="nav">
